+ Task 3 (refactor solution)